# valence

./: Cargo.toml  README.md
benches/: many_players.rs  packet.rs
crates/valence_advancement/src/: lib.rs
crates/valence_anvil/src/: lib.rs  parsing.rs
crates/valence_command/src/: manager.rs
crates/valence_entity/: build.rs
crates/valence_entity/extracted/: entities.json  misc.json
crates/valence_entity/src/: active_status_effects.rs  attributes.rs  hitbox.rs  lib.rs  query.rs
crates/valence_generated/extracted/: items.json  test.py
crates/valence_inventory/src/: lib.rs  validate.rs
crates/valence_nbt/src/: binary.rs
crates/valence_network/src/: connect.rs  lib.rs  packet_io.rs
crates/valence_protocol/: Cargo.toml  README.md  build.rs
crates/valence_protocol/src/: bit_set.rs  bit_storage.rs  block_pos.rs  global_pos.rs  hash_utils.rs  id_or.rs  id_set.rs  item.rs  item_component.rs  lib.rs  packets.rs  profile.rs  sound.rs  text_component.rs
crates/valence_protocol_macros/src/: hash_ops.rs  lib.rs  packet.rs
crates/valence_registry/src/: biome.rs  codec.rs
crates/valence_serde/: Cargo.toml
crates/valence_serde/src/: item.rs
crates/valence_server/src/: client.rs  client_settings.rs  resource_pack.rs  spawn.rs  status_effect.rs
examples/: advancement.rs  bench_players.rs  block_entities.rs  building.rs  ctf.rs  item_components.rs  particles.rs  potions.rs  terrain.rs  weather.rs  world_border.rs
extractor/: copy_extractor_output.bat  copy_extractor_output.sh
src/: testing.rs
src/tests/: client.rs  example.rs  inventory.rs
(+55 files in other folders)
